[package]
name = "benchmark_runner"
version = "0.1.0"
authors = ["Johannes Schoisswohl <johannes.schoisswohl@myotis.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
itertools = "0.9"
indicatif = {version = "0.14", features = ["with_rayon"]}
rayon = "1.1"
num_cpus = "1.12"
tempfile = "3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
ctrlc = "3.1"
derivative = "2.1"
lazy_static = "1.0"
