[package]
name = "benchmark_runner"
version = "0.1.0"
authors = ["Johannes Schoisswohl <johannes.schoisswohl@myotis.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
itertools = "0.9"
indicatif = {version = "0.14", features = ["with_rayon"]}
rayon = "1.1"
num_cpus = "1.12"
tempfile = "3"
ctrlc = "3.1"
derivative = "2.1"
# futures = {version = "0.3", features = ["thread-pool"] }
anyhow = "1.0"
crossbeam-channel = "0.4"
crossbeam = "0.7"
wait-timeout = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
thiserror = "1.0"
derive-new = "0.5"
log = "0.4"
